@@ -19,6 +19,7 @@ def test_error_handler(flask_apm_client):
     assert exc['type'] == 'ValueError'
     assert exc['message'] == 'ValueError: hello world'
     assert event['culprit'] == 'tests.contrib.flask.fixtures.an_error'
+    assert event['handled'] is False
 
 
 def test_get(flask_apm_client):
